# DeadBase

./: .agents-cli-spec.md  .env.example  .gitignore  CONTRIBUTING.md  DEVELOPER.md  README.md  agents-cli-manifest.yaml  pyproject.toml
app/: __init__.py  agent.py  cloud_run_auth.py  fast_api_app.py  instruction_loader.py  litellm_bootstrap.py  model_factory.py  tools.py
app/app_utils/: telemetry.py  typing.py
app/instructions/: build_analyst.md  coach_agent.md  comparison_analyst.md  data_analyst.md  knowledge_analyst.md
docs/: architecture.md  data-surface.md  patch-notes.md  provider-setup.md  review-guide.md
docs/architecture/: README.md  chat-agent-architecture.md
scripts/: prepush_safety_check.sh
src/deadlock_coach/: __init__.py  __main__.py  account_service.py  adk_chat.py  agent_contracts.py  agent_orchestration.py  analytics_service.py  api.py  api_models.py  asset_service.py  cli.py  coach_service.py  config.py  data_surface.py  knowledge_base.py  memory_schema.sql  (+8 more)
src/deadlock_coach.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_account_service.py  test_adk_chat.py  test_adk_tools.py  test_agent_configuration.py  test_agent_orchestration.py  test_analytics_service.py  test_api_models.py  test_bootstrap.py  test_coach_service.py  test_eval_metrics.py  test_instruction_loader.py  test_knowledge_base.py  test_message_hints.py  test_model_factory.py  test_normalization.py  test_semantic_router.py  test_server_api.py  test_telemetry.py  test_workspace_summary.py
web/: app.js  index.html  styles.css
(+2238 files in other folders)
